# Image-and-Video-Processing-From-Mars-to-Hollywood-with-a-Stop-at-the-Hospital---Assignments

./: README.md
Week 1/Optional Assignment 1/: Source.cpp
Week 1/Optional Assignment 2/: Source.cpp
Week 1/Optional Assignment 2/By Using Built in Functions/: Source.cpp
Week 1/Optional Assignment 4/: Source.cpp
Week 2/Optional Assignment 1/: CMakeLists.txt  Source.cpp
